5389: possible fix to spacing

--- a/src/styles/scss/shared.scss
+++ b/src/styles/scss/shared.scss
@@ -57,7 +57,7 @@
 }
 
 .modal-padding {
-  padding: 20px;
+  padding: $s-lg;
 }
 
 .modal-show {
